Add Logger implementation
